--- a/popup.html
+++ b/popup.html
@@ -8,6 +8,13 @@
         padding: 10px;
       }
       button {
+        width: 220px;
+        background-color: rgb(177, 31, 217);
+        border-radius: 10px;
+        border: none;
+        font-size: 15px;
+        height: 50px;
+        color: white;
         padding: 8px 12px;
         cursor: pointer;
       }
